apps/staging/api-btc/bit-coin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: bitcoin
  template:
    metadata:
      labels:
        app: bitcoin
    spec:
      containers:
        - name: bitcoin-api
          image: ghcr.io/xfilipwozniakx/bitcoin_api:v0.1.62
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: shared-directory
            mountPath: /api/www
        - name: nginx
          image: nginxinc/nginx-unprivileged:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
             
          volumeMounts:
          - name: shared-directory
            mountPath: /usr/share/nginx/html
          - name: nginx-cfg
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
          #  readOnly: true

          ports: 
            - containerPort: 8080
      volumes:
      - name: shared-directory
        emptyDir: {}
      - name: nginx-cfg
        configMap:
          name: nginx-config
