apps/staging/api-btc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: btc-api-svc
  namespace: homarr
spec:
  type: ClusterIP
  selector:
    app: bitcoin
  ports:
    - name: external
      port: 8082
      targetPort: 8080
      protocol: TCP
