apps/staging/api-btc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-nginx
spec: 
  ingressClassName: traefik
  rules: 
    - host: bitcoin-api.filipwozniak.org 
      http:
        paths: 
          - backend: 
              service:
                name: btc-api-svc
                port:
                  number: 8082
            path: / 
            pathType: Prefix
